Bug fix, regression on overflow

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -237,7 +237,6 @@ nav {
 
 .map {
   height:500px;
-  width:600px;
 }
 
 .map iframe {
